# PRGB

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README_zh.md  USAGE.md  eval.py  example_usage.py  pyproject.toml  requirements.txt  run_eval.sh  run_http_eval.sh
core/: __init__.py  data.py  eval.py  eval_apis.py  eval_draft.py  eval_types.py  logger.py  models.py
core/models/: __init__.py  api_models.py  vllm_models.py
data/: en.jsonl  zh.jsonl
examples/: basic_evaluation.py  export_errors.py
utils/: __init__.py  filter_mutual_right_samples.py  filter_similar_query.py  transfer_csv_to_jsonl.py
